--- a/proyectLibraries/components/Button/Button.scss
+++ b/proyectLibraries/components/Button/Button.scss
@@ -1,26 +1,31 @@
-@use '../../src/styles.scss' as *;
+@import '../../styles/variables.scss';
+@import '../../styles/mixins.scss';
+
 
 .containerBtnFilter{
     width: 100%;
     height: auto;
      
-    &__btn{
-        border: none;
-        background-color: $color-secundary;
-        color: white;
-        padding: 12px 22px;
-        display: flex;
-        align-items: center;
-        gap: 20px;
+    
+      
+      &__btn {
+        @include btn-styles;
         position: fixed;
         bottom: 20px;
-        left: 50%;       
+        left: 50%;
         transform: translateX(-50%);
-        cursor: pointer;
-       
-        &-img{
-            filter: invert(1);
-           
+        padding: 12px 22px;
+
+      
+        &-img {
+          filter: invert(1);
         }
-    }
+      }
+      
+      &__btn-no-position {
+        @include btn-styles;
+      }
+      
+
+  
 }
